--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
         run: python -m pip install -r requirements.txt
 
       - name: Run Python programs (1/2)
-        run: python src/data_profiler.py data/heart_2022_with_nans.csv
+        run: python src/data_profiler.py data/heart_2022_no_nans.csv
 
       - name: Run Python programs (2/2)
-        run: python src/xgboost_model_evaluator.py
+        run: python src/xgboost_model_evaluator.py data/heart_2022_no_nans.csv
